--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "shopigo/magento2-extension-login-as-customer",
   "description": "Login as Customer extension for Magento 2",
   "require": {
-    "php": "~7.0.13|~7.1.0",
+    "php": "7.0.2|7.0.4|~7.0.6|~7.1.0",
     "magento/module-customer": "101.0.*",
     "magento/framework": "101.0.*"
   },
