--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "shopigo/magento2-extension-login-as-customer",
-  "description": "Login as Customer extension for Magento 2",
+  "description": "Magento 2 Login as Customer extension by Shopigo",
   "require": {
     "php": "7.0.2|7.0.4|~7.0.6|~7.1.0",
     "magento/module-customer": "101.0.*",
