--- a/composer.json
+++ b/composer.json
@@ -2,12 +2,12 @@
   "name": "shopigo/magento2-extension-login-as-customer",
   "description": "Magento 2 Login as Customer extension by Shopigo",
   "require": {
-    "php": "7.0.2|7.0.4|~7.0.6|~7.1.0",
-    "magento/module-customer": "101.0.*",
-    "magento/framework": "101.0.*"
+    "php": "^7.0",
+    "magento/module-customer": "*",
+    "magento/framework": "*"
   },
   "type": "magento2-module",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "license": [
     "OSL-3.0",
     "AFL-3.0"
